test/classes/errors/nilability-init-field-arg/init-field-arg-oknil-shared-from-nonnil-owned.future
bug: can't assign to nilable shared from non-nilable owned

Not only that, but the reported error is unclear.

Tests affected by this issue:

    init-var-oknil-shared-from-nonnil-owned
    init-field-arg-oknil-shared-from-nonnil-owned
